# philharmonic_hall

./: Dockerfile  docker-compose.yml  pyproject.toml
Docs/: gpt question.txt
Docs/DB_BACKUP/: philharmonic
philharmonic/: manage.py
philharmonic/main/: admin.py  forms.py  models.py  urls.py  views.py
philharmonic/main/migrations/: 0001_initial.py  0002_culturalvenuetype_alter_culturalvenue_type.py  0003_remove_culturalvenuetype_default_attributes_and_more.py  0004_remove_culturalvenue_area_and_more.py
philharmonic/main/static/main/: venue_form.js
philharmonic/main/templates/main/: all_data.html  combined_data.html  home.html  sql_query.html
philharmonic/philharmonic/: asgi.py  settings.py  urls.py  wsgi.py
